<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.magwas</groupId>
	<artifactId>testfx</artifactId>
	<version>0.0.1</version>
	<description>Test of javafx ui packaging</description>
	<distributionManagement>
		<site>
			<id>website</id>
			<name>Project site</name>
			<url>https://repo.kodekonveyor.com/${project.artifactId}</url>
		</site>
	</distributionManagement>
	<licenses>
		<license>
			<name>GPL affero</name>
			<url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
			<comments>GNU Affero General Public License</comments>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<javafx.version>21.0.8</javafx.version>
		<jpro.version>2024.4.0</jpro.version>
		<mainclass>io.github.magwas.testfx.HelloWorldButton</mainclass>
		<mainmodule>io.github.magwas.testfx/HelloWorldButton</mainmodule>
		<jpackageInputDirectory>${project.build.directory}/jpackage-input</jpackageInputDirectory>
<gluonfx.plugin.version>1.0.27</gluonfx.plugin.version>	</properties>
	<repositories>
		<repository>
			<id>jpro-sandec-repository</id>
			<url>https://sandec.jfrog.io/artifactory/repo</url>
		</repository>
		<repository>
			<id>gluon-releases</id>
			<url>https://nexus.gluonhq.com/nexus/content/repositories/releases</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>jpro-sandec-repository</id>
			<url>https://sandec.jfrog.io/artifactory/repo</url>
		</pluginRepository>
	</pluginRepositories>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<outputDirectory>${jpackageInputDirectory}</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${jpackageInputDirectory}/lib
							</outputDirectory>
							<excludeGroupIds>
								org.openjfx
							</excludeGroupIds>
							<includeScope>
								runtime
							</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<!-- Specify your main JavaFX application class -->
					<mainClass>${mainclass}</mainClass>
				</configuration>
				<executions>
					<execution>
						<id>create-runtime-image</id>
						<phase>package</phase>
						<goals>
							<goal>jlink</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>one.jpro</groupId>
				<artifactId>jpro-maven-plugin</artifactId>
				<version>${jpro.version}</version>
				<configuration>
					<mainClassName>${mainclass}</mainClassName>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>linux-x86_64</id>
			<activation>
				<os>
					<name>linux</name>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>com.github.akman</groupId>
						<artifactId>jpackage-maven-plugin</artifactId>
						<version>0.1.5</version>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>jpackage</goal>
								</goals>
								<configuration>
									<name>${project.artifactId}</name>
									<appversion>${project.version}</appversion>
									<copyright>${project.licenses}</copyright>
									<description>${project.description}</description>
									<licensefile>LICENSE</licensefile>
									<modulepath>
										<dependencysets>
											<dependencyset>
												<includeoutput>false</includeoutput>
												<excludeautomatic>true</excludeautomatic>
												<includes>
													<!-- todo would it be better
													to
											fetch jmods and use them? -->
													<include>
														glob:**/javafx-*-linux.jar</include>
												</includes>
											</dependencyset>
										</dependencysets>
										<dirsets>
											<dirset>
												<directory>target</directory>
												<includes>
													<include>**/*</include>
												</includes>
												<excludes>
													<exclude>**/*Test</exclude>
												</excludes>
												<followSymlinks>true</followSymlinks>
											</dirset>
										</dirsets>
									</modulepath>
									<addmodules>
										<addmodule>javafx.controls</addmodule>
									</addmodules>
									<mainjar>testfx-${project.version}.jar</mainjar>
									<mainclass>${mainclass}</mainclass>
									<input>${jpackageInputDirectory}</input>
									<verbose>true</verbose>
									<javaoptions>--enable-preview</javaoptions>
								</configuration>
							</execution>
						</executions>
						<dependencies>
							<dependency>
								<groupId>org.ow2.asm</groupId>
								<artifactId>asm</artifactId>
								<version>9.5</version>
							</dependency>
						</dependencies>
					</plugin>
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx.plugin.version}</version>
                <configuration>
                    <mainClass>${mainclass}</mainClass>
                    <target>android</target>
                    <attachList>
                        <list>display</list>
                        <list>lifecycle</list>
                        <list>statusbar</list>
                        <list>storage</list>
                    </attachList>
                </configuration>
            </plugin>				</plugins>
			</build>
		</profile>
	</profiles>
</project>